--- a/RestaurantApi.Infrastructure.Shared/RestaurantApi.Infrastructure.Shared.csproj
+++ b/RestaurantApi.Infrastructure.Shared/RestaurantApi.Infrastructure.Shared.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RestaurantApi.Core.Application\RestaurantApi.Core.Application.csproj" />
+  </ItemGroup>
+
 </Project>
