--- a/RestaurantApi.Infrastructure.Persistence/RestaurantApi.Infrastructure.Persistence.csproj
+++ b/RestaurantApi.Infrastructure.Persistence/RestaurantApi.Infrastructure.Persistence.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RestaurantApi.Core.Application\RestaurantApi.Core.Application.csproj" />
   </ItemGroup>
 
