--- a/RestaurantApi.Core.Application/RestaurantApi.Core.Application.csproj
+++ b/RestaurantApi.Core.Application/RestaurantApi.Core.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RestaurantApi.Core.Domain\RestaurantApi.Core.Domain.csproj" />
   </ItemGroup>
 
