--- a/RestaurantApi.Core.Application/RestaurantApi.Core.Application.csproj
+++ b/RestaurantApi.Core.Application/RestaurantApi.Core.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
   </ItemGroup>
 
