Enabled user-secrets for DB ConnectionString

--- a/RestaurantApi/RestaurantApi.csproj
+++ b/RestaurantApi/RestaurantApi.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<UserSecretsId>48dc5245-ba16-49d5-aced-3785f4fa63d7</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
