Identity initial setup

--- a/RestaurantApi.Infrastructure.Identity/RestaurantApi.Infrastructure.Identity.csproj
+++ b/RestaurantApi.Infrastructure.Identity/RestaurantApi.Infrastructure.Identity.csproj
@@ -25,4 +25,9 @@
     <ProjectReference Include="..\RestaurantApi.Core.Application\RestaurantApi.Core.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Seeds\" />
+  </ItemGroup>
+
 </Project>
