--- a/RestaurantApi/RestaurantApi.csproj
+++ b/RestaurantApi/RestaurantApi.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RestaurantApi.Infrastructure.Identity\RestaurantApi.Infrastructure.Identity.csproj" />
     <ProjectReference Include="..\RestaurantApi.Infrastructure.Persistence\RestaurantApi.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
