--- a/RestaurantApi.Infrastructure.Shared/RestaurantApi.Infrastructure.Shared.csproj
+++ b/RestaurantApi.Infrastructure.Shared/RestaurantApi.Infrastructure.Shared.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.14.1" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+    <PackageReference Include="MimeKit" Version="4.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RestaurantApi.Core.Application\RestaurantApi.Core.Application.csproj" />
   </ItemGroup>
 
