appsettings.json: MailSettings and JWTSettings added

--- a/RestaurantApi/appsettings.json
+++ b/RestaurantApi/appsettings.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "JWTSettings": {
+    "Issuer": "RestaurantApiIdentity",
+    "Audience": "RestaurantApi",
+    "DurationInMinutes": 60
+  },
+  "MailSettings": {
+    "Port": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
