--- a/RestaurantApi.Core.Application/RestaurantApi.Core.Application.csproj
+++ b/RestaurantApi.Core.Application/RestaurantApi.Core.Application.csproj
@@ -9,11 +9,17 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="12.1.1" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RestaurantApi.Core.Domain\RestaurantApi.Core.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Ingredients\Commands\UpdateIngredient\" />
+    <Folder Include="Features\Ingredients\Queries\" />
   </ItemGroup>
 
 </Project>
