--- a/RestaurantApi.Core.Application/RestaurantApi.Core.Application.csproj
+++ b/RestaurantApi.Core.Application/RestaurantApi.Core.Application.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Ingredients\Queries\" />
+    <Folder Include="Features\Ingredients\Queries\GetIngredientById\" />
   </ItemGroup>
 
 </Project>
